@@ -1,5 +1,6 @@
 == master
 
+* Add other_states directive for defining additional states not referenced in transitions or callbacks [Pete Forde]
 * Add next_#{event}_transition for getting the next transition that would be performed if the event were invoked
 * Add the ability to override the pluralized name of an attribute for creating scopes
 * Add the ability to halt callback chains by: throw :halt
